--- a/public/modules/custom/tyollisyyspalvelut_common/css/tyollisyyspalvelut_common.css
+++ b/public/modules/custom/tyollisyyspalvelut_common/css/tyollisyyspalvelut_common.css
@@ -2,4 +2,15 @@
   width: 100%;
 }
 
+.hdbt-admin.path-node .region-sticky,
+.hdbt-admin.path-node .region-header,
+.hdbt-admin.path-node .region-content {
+  width: 100%;
+  max-width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
+}
 
+.hdbt-admin .region-sticky .region-sticky__items__inner {
+  justify-content: end;
+}
