--- a/public/modules/custom/tyollisyyspalvelut_common/css/ckeditor.css
+++ b/public/modules/custom/tyollisyyspalvelut_common/css/ckeditor.css
@@ -30,3 +30,25 @@ h6 {
   letter-spacing: normal !important;
   text-transform: none !important;
 }
+
+a[data-is-external="true"],
+a[data-entity-type="node"] {
+  display: inline-flex;
+}
+
+a[data-is-external="true"]::after,
+a[data-entity-type="node"]::after {
+  content: '';
+  margin-left: 4px;
+  width: 1.25rem;
+}
+
+a[data-entity-type="node"]::after {
+  margin-right: 8px;
+  background: url('../assets/arrow-right.svg') no-repeat center center;
+}
+
+a[data-is-external="true"]::after {
+  margin-right: 4px;
+  background: url('../assets/arrow-top-right.svg') no-repeat center center;
+}
